--- a/package.json
+++ b/package.json
@@ -8,17 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@airgap/beacon-sdk": "^3.0.0",
+    "@taquito/beacon-wallet": "^12.1.0",
+    "@taquito/taquito": "^12.1.0",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0"
   },
   "eslintConfig": {
     "root": true,
