--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@airgap/beacon-sdk": "^3.0.0",
     "@taquito/beacon-wallet": "^12.1.0",
     "@taquito/taquito": "^12.1.0",
+    "buffer": "^6.0.3",
+    "core-js": "^3.8.3",
     "path-browserify": "^1.0.1",
     "stream-browserify": "^3.0.0",
-    "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vuex": "^4.0.0"
   },
